# llvm-profparser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  coverage.yml
benches/: coverage_mapping.rs  profdata_parsing.rs  profraw_parsing.rs  report_merging.rs
benches/data/: cargo_testsuite.profdata  tokio-rt.profraw
benches/data/mapping/: .gitignore
benches/data/tarpaulin_profraws/: integration-46a95dab14c8867a_1189722821966432799_0-9464.profraw  integration-46a95dab14c8867a_1202227910377491762_0-9674.profraw  integration-46a95dab14c8867a_1202227910377491762_0-9681.profraw  integration-46a95dab14c8867a_1307752339143346457_0-9216.profraw  integration-46a95dab14c8867a_367949795649510810_0-9200.profraw  integration-46a95dab14c8867a_779069830997216417_0-10622.profraw  integration-46a95dab14c8867a_824605094391903852_0-9542.profraw
examples/: parse_profdata.rs
fuzz/: Cargo.toml  README.md  setup_corpus.sh
fuzz/fuzz_targets/: profile_data.rs
src/: hash_table.rs  lib.rs  main.rs  summary.rs  util.rs
src/coverage/: coverage_mapping.rs  mod.rs  reporting.rs
src/instrumentation_profile/: binary_writer.rs  indexed_profile.rs  mod.rs  raw_profile.rs  stats.rs  summary.rs  symtab.rs  text_profile.rs  types.rs
tests/: cov.rs  profdata.rs  show.rs
tests/data/cov/: simple_project.profraw
tests/data/llvm-11/: simple_project.profraw
tests/data/matches/: matches.stdout  merged.profdata
tests/data/profdata/llvm-14/: win_run_coverage.profraw
tests/data/profdata/misc/: merged.profdata  premerge_1.profraw  premerge_2.profraw  stable.profdata  stable.profraw  stable2.profraw
tests/data/profdata/misc/multibin_merge/: bin_1.profraw  bin_2.1.profraw  bin_2.2.profraw  bin_2.3.profraw
tests/data/stable_vec/: .gitignore  Cargo.toml
tests/data/stable_vec/src/: lib.rs
