[package]
name = "llvm_profparser"
version = "0.1.0-alpha5"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
description = "Parsing and interpretation of llvm coverage profiles and generated data"
repository = "https://github.com/xd009642/llvm-profparser"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
categories = ["encoding"]
keywords = ["coverage", "llvm"]
exclude = ["tests/*", ".github/*"]
build = "build.rs"

[features]
default = ["cli"]
cli = ["structopt"]

[dependencies]
flate2 = "1.0"
indexmap = "1.8.0"
leb128 = "0.2.4"
nom = "7.0.0"
num_enum = "0.5.1"
md5 = "0.7"
object = "0.26.0"
structopt = { version = "0.3.21", optional = true }

[dev-dependencies]
assert_cmd = "2"
pretty_assertions = "0.7"

[[bin]]
name = "profparser"
required-features = ["cli"]

[[bin]]
name = "cov"
required-features = ["cli"]
